trunk/Archive2/e8/5764f44b394b2c/output
main.cpp: In function 'int main()':
main.cpp:5:28: error: invalid conversion from 'void*' to 'char*' [-fpermissive]
     char* name = malloc (16);
                            ^
