trunk/Archive2/e8/5764f44b394b2c/main.cpp
#include <stdlib.h>

int main()
{
    char* name = malloc (16);
    (void)name;
}
